# Uni.HAL.Example.STM32H7

./: CMakeLists.txt
src_app/: app.c  app_key.c
src_assets/: CMakeLists.txt  dashboard.html  index.html  updater.html
src_lib/: CMakeLists.txt
src_lib/config/: app_config.h  app_config_net.c  app_config_rcc.c  app_config_stdio.c  app_config_uart.c  app_config_uart.h
src_lib/net/: ox_net.c  ox_net.h  ox_net_hooks.c
src_lib/perf/: ox_perf_stats.c  ox_perf_stats.h
src_lib/server_http/: ox_server_http_dashboard.c  ox_server_http_updater.c
src_lib/stdio/: ox_stdio.c  ox_stdio.h
src_lib/trx/: app_config_trx.c  app_config_trx.h  ox_trx.c  ox_trx.h  ox_trx_decrypt.c  ox_trx_decrypt.h  ox_trx_types.h
